--- a/examples/mauro_examples/ReverseNumber-multiuser.ipynb
+++ b/examples/mauro_examples/ReverseNumber-multiuser.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "686be679-0b12-4675-8f25-67aaabc9c33a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,10 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3290339a-e045-465a-a503-03dece48822a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nicolasbaldwin/opt/miniconda3/envs/coflows/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os, json\n",
     "\n",
@@ -52,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "aa7d4186-d488-4a52-99d6-6a804cccd977",
    "metadata": {},
    "outputs": [],
@@ -70,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c36a4f71-7fc6-490c-9966-de8725120a64",
    "metadata": {},
    "outputs": [
@@ -80,29 +98,7 @@
      "text": [
       "Dispatch worker started in attached thread.\n",
       "dispatch_point: coflows_dispatch\n",
-      "get_instances worker started in attached thread for user  02acba5dea871c06c99ba42bb813eeef11074940671bd3a950f89ebed350da52a3\n",
-      "\n",
-      "~~~ serving get_instances request ~~~\n",
-      "Mounted c9257714-8465-4951-8c15-e4aefaa58cc3 at flows:reverse_number_atomic:mounts:02d29bc3e276de86016c350d3e3b637148eda4af310c0f84405c0f138365aab669:c9257714-8465-4951-8c15-e4aefaa58cc3\n",
-      "Fetched singleton c9257714-8465-4951-8c15-e4aefaa58cc3\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_endpoint: reverse_number_atomic\n",
-      "flow_id: c9257714-8465-4951-8c15-e4aefaa58cc3\n",
-      "message_paths: ['push_tasks:22b5208d-2d44-497e-a930-b0958b2ccc73:msg']\n",
-      "parallel_dispatch: False\n",
-      "\n",
-      "Called ReverseNumberAtomic \n",
-      " state {}\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_endpoint: reverse_number_atomic\n",
-      "flow_id: c9257714-8465-4951-8c15-e4aefaa58cc3\n",
-      "message_paths: ['push_tasks:816601b3-86b0-4c12-9cb1-b2177c024ebd:msg']\n",
-      "parallel_dispatch: False\n",
-      "\n",
-      "Called ReverseNumberAtomic \n",
-      " state {}\n"
+      "get_instances worker started in attached thread for user  03b1fa8528934896b6e2fa9ad609cd83a0efa419c327673c4b5bbfeb56041c2ae7\n"
      ]
     }
    ],
@@ -113,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fd1aa9eb-13a2-43f1-9d07-ce1f29d5a38e",
    "metadata": {},
    "outputs": [
@@ -124,7 +120,8 @@
       "Started serving ReverseNumberFlowModule.ReverseNumberAtomicFlow at flows:reverse_number_atomic.\n",
       "dispatch_point: coflows_dispatch\n",
       "parallel_dispatch: False\n",
-      "singleton: True\n"
+      "singleton: True\n",
+      "\n"
      ]
     },
     {
@@ -133,7 +130,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6c0f9635-9e85-4f81-a5f5-5e587ad80c36",
    "metadata": {},
    "outputs": [
@@ -167,48 +164,7 @@
      "text": [
       "Dispatch worker started in attached thread.\n",
       "dispatch_point: coflows_dispatch\n",
-      "get_instances worker started in attached thread for user  02d29bc3e276de86016c350d3e3b637148eda4af310c0f84405c0f138365aab669\n",
-      "\n",
-      "~~~ get_instances initiator ~~~\n",
-      "Received subflow instances: {\n",
-      "    \"first_reverse_flow\": {\n",
-      "        \"flow_id\": \"c9257714-8465-4951-8c15-e4aefaa58cc3\",\n",
-      "        \"successful\": true,\n",
-      "        \"message\": \"Fetched local flow instance.\"\n",
-      "    },\n",
-      "    \"second_reverse_flow\": {\n",
-      "        \"flow_id\": \"c9257714-8465-4951-8c15-e4aefaa58cc3\",\n",
-      "        \"successful\": true,\n",
-      "        \"message\": \"Fetched local flow instance.\"\n",
-      "    }\n",
-      "}\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_endpoint: reverse_number_sequential\n",
-      "flow_id: 3180a6d9-7eb5-4ec3-8c7b-3c9c08f4fbdc\n",
-      "message_paths: ['push_tasks:19a6afcb-770b-4dac-af51-7946f01e12fe:msg']\n",
-      "parallel_dispatch: False\n",
-      "\n",
-      "Called ReverseNumberSequential \n",
-      " state {'current_call': 'first_reverse_flow'}\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_endpoint: reverse_number_sequential\n",
-      "flow_id: 3180a6d9-7eb5-4ec3-8c7b-3c9c08f4fbdc\n",
-      "message_paths: ['push_tasks:5ff02c60-e4ad-4a6a-8a9f-ac30f378a5ea:msg']\n",
-      "parallel_dispatch: False\n",
-      "\n",
-      "Called ReverseNumberSequential \n",
-      " state {'current_call': 'second_reverse_flow', 'initial_message': FlowMessage(message_id='c2d251f7-da58-44bf-a98c-df2b7d18bd50', created_at='2024-03-16 23:52:30.016026701', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n",
-      "\n",
-      "~~~ Dispatch task ~~~\n",
-      "flow_endpoint: reverse_number_sequential\n",
-      "flow_id: 3180a6d9-7eb5-4ec3-8c7b-3c9c08f4fbdc\n",
-      "message_paths: ['push_tasks:c305e8c0-5bae-41f1-b4a7-e4de927564bd:msg']\n",
-      "parallel_dispatch: False\n",
-      "\n",
-      "Called ReverseNumberSequential \n",
-      " state {'current_call': 'reply_to_message', 'initial_message': FlowMessage(message_id='c2d251f7-da58-44bf-a98c-df2b7d18bd50', created_at='2024-03-16 23:52:30.016026701', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n"
+      "get_instances worker started in attached thread for user  03eeb068191828bdfd452f7cbda672f92a3639c9777b2757d73a8fc8b8b230b2c6\n"
      ]
     }
    ],
@@ -219,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b364acfc-97c9-41b3-be24-62f6262d2872",
    "metadata": {},
    "outputs": [
@@ -230,7 +186,8 @@
       "Started serving ReverseNumberFlowModule.ReverseNumberSequentialFlow at flows:reverse_number_sequential.\n",
       "dispatch_point: coflows_dispatch\n",
       "parallel_dispatch: False\n",
-      "singleton: False\n"
+      "singleton: False\n",
+      "\n"
      ]
     },
     {
@@ -239,7 +196,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,14 +204,14 @@
    "source": [
     "serve_utils.serve_flow(\n",
     "    cl=cls[1],\n",
-    "    flow_class_name=\"ReverseNumberFlowModule.ReverseNumberSequentialFlow\",\n",
-    "    flow_endpoint=\"reverse_number_sequential\",\n",
+    "    flow_class_name=\"ReverseNumberFlowModule.ReverseNumbeAtomicFlow\",\n",
+    "    flow_endpoint=\"reverse_number_atomice\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f16b39d6-d231-4743-9aec-cf57551e2c0d",
    "metadata": {},
    "outputs": [
@@ -262,7 +219,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mounted 3180a6d9-7eb5-4ec3-8c7b-3c9c08f4fbdc at flows:reverse_number_sequential:mounts:local:3180a6d9-7eb5-4ec3-8c7b-3c9c08f4fbdc\n"
+      "\n",
+      "~~~ serving get_instances request ~~~\n",
+      "task_id = 5619caf6-ab74-4dae-8ebf-7b1f8fd86e99\n",
+      "get_instance_calls: [['first_reverse_flow', 'reverse_number_atomic', {'flow_class_name': 'ReverseNumberFlowModule.ReverseNumberAtomicFlow', 'singleton': True, 'name': 'ReverseNumberFirst', 'description': 'A flow that takes in a number and reverses it.'}], ['second_reverse_flow', 'reverse_number_atomic', {'flow_class_name': 'ReverseNumberFlowModule.ReverseNumberAtomicFlow', 'name': 'ReverseNumberSecond', 'description': 'A flow that takes in a number and reverses it AGAIN.'}]]\n",
+      "Mounted ea0db682-13c8-4902-8972-199b035fb7dd at flows:reverse_number_atomic:mounts:03eeb068191828bdfd452f7cbda672f92a3639c9777b2757d73a8fc8b8b230b2c6:ea0db682-13c8-4902-8972-199b035fb7dd\n",
+      "Fetched singleton ea0db682-13c8-4902-8972-199b035fb7dd\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_endpoint: reverse_number_atomic\n",
+      "flow_id: ea0db682-13c8-4902-8972-199b035fb7dd\n",
+      "owner_id: 03eeb068191828bdfd452f7cbda672f92a3639c9777b2757d73a8fc8b8b230b2c6\n",
+      "message_paths: ['push_tasks:1b024c13-af28-47bc-9f09-452d3c18e80c:msg']\n",
+      "parallel_dispatch: False\n",
+      "\n",
+      "Input message source: first_reverse_flow\n",
+      "Called ReverseNumberAtomic \n",
+      " state {}\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_endpoint: reverse_number_atomic\n",
+      "flow_id: ea0db682-13c8-4902-8972-199b035fb7dd\n",
+      "owner_id: 03eeb068191828bdfd452f7cbda672f92a3639c9777b2757d73a8fc8b8b230b2c6\n",
+      "message_paths: ['push_tasks:67aa3588-de32-47aa-a5cd-788d1ac8e382:msg']\n",
+      "parallel_dispatch: False\n",
+      "\n",
+      "Input message source: first_reverse_flow\n",
+      "Called ReverseNumberAtomic \n",
+      " state {}\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "~~~ get_instances initiator ~~~\n",
+      "task_id = 5619caf6-ab74-4dae-8ebf-7b1f8fd86e99\n",
+      "Received subflow instances: {\n",
+      "    \"first_reverse_flow\": {\n",
+      "        \"flow_id\": \"ea0db682-13c8-4902-8972-199b035fb7dd\",\n",
+      "        \"successful\": true,\n",
+      "        \"message\": \"Fetched local flow instance.\"\n",
+      "    },\n",
+      "    \"second_reverse_flow\": {\n",
+      "        \"flow_id\": \"ea0db682-13c8-4902-8972-199b035fb7dd\",\n",
+      "        \"successful\": true,\n",
+      "        \"message\": \"Fetched local flow instance.\"\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_endpoint: reverse_number_sequential\n",
+      "flow_id: 729cc81e-8e0d-461e-9b0f-1edbdae8988d\n",
+      "owner_id: local\n",
+      "message_paths: ['push_tasks:4d6390ac-c294-4915-b5ec-68fe2f795f41:msg']\n",
+      "parallel_dispatch: False\n",
+      "\n",
+      "Input message source: Proxy_reverse_number_sequential\n",
+      "Called ReverseNumberSequential \n",
+      " state {'current_call': 'first_reverse_flow'}\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_endpoint: reverse_number_sequential\n",
+      "flow_id: 729cc81e-8e0d-461e-9b0f-1edbdae8988d\n",
+      "owner_id: local\n",
+      "message_paths: ['push_tasks:62b2d3bc-5399-4759-8ac2-f4e530a2ecb4:msg']\n",
+      "parallel_dispatch: False\n",
+      "\n",
+      "Input message source: ReverseNumberFirst\n",
+      "Called ReverseNumberSequential \n",
+      " state {'current_call': 'second_reverse_flow', 'initial_message': FlowMessage(message_id='6a3e41b2-fac4-480e-8a26-e4c5b755fab6', created_at='2024-03-20 22:03:22.442985000', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
+      "flow_endpoint: reverse_number_sequential\n",
+      "flow_id: 729cc81e-8e0d-461e-9b0f-1edbdae8988d\n",
+      "owner_id: local\n",
+      "message_paths: ['push_tasks:f29e891c-1e75-418f-858c-39212bd36b3a:msg']\n",
+      "parallel_dispatch: False\n",
+      "\n",
+      "Input message source: ReverseNumberFirst\n",
+      "Called ReverseNumberSequential \n",
+      " state {'current_call': 'reply_to_message', 'initial_message': FlowMessage(message_id='6a3e41b2-fac4-480e-8a26-e4c5b755fab6', created_at='2024-03-20 22:03:22.442985000', created_by='Proxy_reverse_number_sequential', message_type='FlowMessage', data={'id': 0, 'number': 1234}, private_keys=[])}\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mounted 729cc81e-8e0d-461e-9b0f-1edbdae8988d at flows:reverse_number_sequential:mounts:local:729cc81e-8e0d-461e-9b0f-1edbdae8988d\n"
      ]
     }
    ],
@@ -290,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "527e26fe-5210-4218-99e1-b4a15486f7a7",
    "metadata": {},
    "outputs": [
@@ -410,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
