added link for section 3

--- a/AMLD/ReverseNumber/ReverseNumber.ipynb
+++ b/AMLD/ReverseNumber/ReverseNumber.ipynb
@@ -10,7 +10,7 @@
     "- learn the Flow basics and implement your first Flow [Section 1](#1-writing-your-first-atomicflow-reversenumberatomicflow)\n",
     "- understand the basics of Flows engine and serve your first Flow [Section 2](#2-flow-engine)\n",
     "- learn how to call served Flows [Section 2](#24-getting-an-instance-of-the-served-flow-via-a-proxy)\n",
-    "- learn how to compose Flows into more complex Flows [Section 3]"
+    "- learn how to compose Flows into more complex Flows [Section 3](#3writing-your-first-compositeflow-reversenumbersequentialflow)"
    ]
   },
   {
