Finished ChatFlow and Chatwith Rails tutorial

--- a/AMLD/ChatWithCompiler/ChatWithCompiler.ipynb
+++ b/AMLD/ChatWithCompiler/ChatWithCompiler.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tutorial 3\n",
+    "\n",
+    "**In this tutorial you will:**\n",
+    "- Build a Chatbot connected to a code interpreter able to execute Python code."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -41,7 +51,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#starting a local colink server\n",
     "cl = colink_utils.start_colink_server()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start Worker thread\n",
+    "run_dispatch_worker_thread(cl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start 2nd Worker thread (in case you're making blocking calls)\n",
+    "run_dispatch_worker_thread(cl)"
    ]
   },
   {
@@ -107,7 +138,6 @@
     "            output = self.query_llm(input_data=input_data).strip()\n",
     "            \n",
     "            try:\n",
-    "                print(\"output is: \", output)\n",
     "                response = json.loads(output)\n",
     "                json_parsable = True\n",
     "            \n",
