examples all work except Funsearc

--- a/AMLD/ChatWithCompiler/ChatWithInterpreter.ipynb
+++ b/AMLD/ChatWithCompiler/ChatWithInterpreter.ipynb
@@ -162,7 +162,7 @@
    "source": [
     "#Install dependencies from FlowVerse\n",
     "dependencies = [\n",
-    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"coflows\"},\n",
+    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"main\"},\n",
     "]\n",
     "from aiflows import flow_verse\n",
     "flow_verse.sync_dependencies(dependencies)"
@@ -678,7 +678,7 @@
    "source": [
     "#Install dependencies from FlowVerse\n",
     "dependencies = [\n",
-    "    {\"url\": \"aiflows/InterpreterFlowModule\", \"revision\": \"coflows\"},\n",
+    "    {\"url\": \"aiflows/InterpreterFlowModule\", \"revision\": \"main\"},\n",
     "]\n",
     "from aiflows import flow_verse\n",
     "flow_verse.sync_dependencies(dependencies)\n"
