--- a/AMLD/ChatFlow/ChatFlow.ipynb
+++ b/AMLD/ChatFlow/ChatFlow.ipynb
@@ -128,7 +128,7 @@
     "from aiflows import flow_verse\n",
     "# ~~~ Load Flow dependecies from FlowVerse ~~~\n",
     "dependencies = [\n",
-    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"coflows\"},\n",
+    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"main\"},\n",
     "]\n",
     "\n",
     "flow_verse.sync_dependencies(dependencies)\n"
