--- a/AMLD/ChatWithGuards/ChatWithGuards.ipynb
+++ b/AMLD/ChatWithGuards/ChatWithGuards.ipynb
@@ -707,7 +707,7 @@
    "source": [
     "#pull chatflow from flowverse\n",
     "dependencies = [\n",
-    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"coflows\"},\n",
+    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"main\"},\n",
     "]\n",
     "from aiflows import flow_verse\n",
     "flow_verse.sync_dependencies(dependencies)\n",
@@ -1237,7 +1237,7 @@
    ],
    "source": [
     "dependencies = [\n",
-    "    {\"url\": \"aiflows/VectorStoreFlowModule\", \"revision\": \"coflows\"},\n",
+    "    {\"url\": \"aiflows/VectorStoreFlowModule\", \"revision\": \"main\"},\n",
     "]\n",
     "from aiflows import flow_verse\n",
     "flow_verse.sync_dependencies(dependencies)\n",
