--- a/AMLD/Human/Human.ipynb
+++ b/AMLD/Human/Human.ipynb
@@ -369,8 +369,8 @@
    ],
    "source": [
     "dependencies = [\n",
-    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"coflows\"},\n",
-    "    {\"url\": \"aiflows/ChatInteractiveFlowModule\", \"revision\": \"coflows\"}\n",
+    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"main\"},\n",
+    "    {\"url\": \"aiflows/ChatInteractiveFlowModule\", \"revision\": \"main\"}\n",
     "]\n",
     "flow_verse.sync_dependencies(dependencies)"
    ]
