--- a/examples/mauro_examples/ChatFlow-languages.ipynb
+++ b/examples/mauro_examples/ChatFlow-languages.ipynb
@@ -60,7 +60,7 @@
     "from aiflows import flow_verse\n",
     "\n",
     "dependencies = [\n",
-    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"coflows\"},\n",
+    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"main\"},\n",
     "]\n",
     "flow_verse.sync_dependencies(dependencies)"
    ]
