--- a/examples/mauro_examples/InteractiveChatFlow.ipynb
+++ b/examples/mauro_examples/InteractiveChatFlow.ipynb
@@ -64,9 +64,9 @@
     "from aiflows import flow_verse\n",
     "\n",
     "dependencies = [\n",
-    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"coflows\"},\n",
-    "    {\"url\": \"aiflows/HumanStandardInputFlowModule\", \"revision\": \"coflows\"},\n",
-    "    {\"url\": \"aiflows/ChatInteractiveFlowModule\", \"revision\": \"coflows\"}\n",
+    "    {\"url\": \"aiflows/ChatFlowModule\", \"revision\": \"main\"},\n",
+    "    {\"url\": \"aiflows/HumanStandardInputFlowModule\", \"revision\": \"main\"},\n",
+    "    {\"url\": \"aiflows/ChatInteractiveFlowModule\", \"revision\": \"main\"}\n",
     "]\n",
     "flow_verse.sync_dependencies(dependencies)"
    ]
