Update setup notebook.

--- a/AMLD/setup/setup.ipynb
+++ b/AMLD/setup/setup.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Thank you for your interest in our workshop!\n",
     "\n",
-    "This notebook is designed to test the your setup and ensure that everything runs smoothly on the day of the workshop. Please follow the instructions below to execute the notebook successfully. If you encounter any issues, please reach out to us.\n",
+    "This notebook is designed to test your setup and ensure that everything runs smoothly on the day of the workshop. Please follow the instructions below to execute the notebook successfully. If you encounter any issues, please reach out to us.\n",
     "\n",
     "### Requirements\n",
     "\n",
@@ -18,7 +18,7 @@
     "\n",
     "If you have conda installed on your machine, you can use the following instructions:\n",
     "\n",
-    "```unix\n",
+    "```bash\n",
     " conda create -n amld python=3.11 --yes\n",
     " conda activate amld\n",
     " conda install -c conda-forge jupyterlab --yes\n",
@@ -32,11 +32,11 @@
     "\n",
     "--- \n",
     "\n",
-    "Most of the Flows we're going to develop during the workshop will require access to LLMs. Therefore, once you make sure that the notebook executes succesfully, please ensure you possess an **OpenAI API key** (check out [this link](https://platform.openai.com/docs/quickstart/account-setup) on how to get one) or a key from a provider supported by LiteLLM (check the list of supported providers [here]((https://docs.litellm.ai/docs/providers))). We highly recommend using an OpenAI key for this workshop. \n",
+    "Most of the Flows we're going to develop during the workshop will require access to LLMs. Therefore, once you make sure that the notebook executes succesfully, please ensure you possess an **OpenAI API key** (check out [this link](https://platform.openai.com/docs/quickstart/account-setup) on how to get one) or a key from a provider supported by LiteLLM (check the list of supported providers [here](https://docs.litellm.ai/docs/providers)). We highly recommend using an OpenAI key for this workshop. \n",
     "\n",
     "Also plese join our Discord server where we will be responding to questions asyncronously as well: [https://discord.gg/pFQTddUbjK](https://discord.gg/pFQTddUbjK)\n",
     "\n",
-    "Don't worry if you do not understand the code in this notebook! After the workshop you'll know how to customize AI workflows on effectively!"
+    "Don't worry if you do not understand the code in this notebook! After the workshop you'll know how to effectively customize AI workflows!"
    ]
   },
   {
