solutions all ready

--- a/AMLD/AMLD_Solutions/2.ChatFlow/ChatFlow.ipynb
+++ b/AMLD/AMLD_Solutions/2.ChatFlow/ChatFlow.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**In this tutorial you will:**\n",
     "- learn how to pull a flow from the FlowVerse [Section 1](#1-flowverse)\n",
-    "- Familiarized yourself with the ChatAtomicFlow [Section 2](#2-chatatomicflow)\n",
+    "- Familiarized yourself with a curcial the ChatAtomicFlow: [Section 2](#2-chatatomicflow)\n",
     "- Learn how to customize existing flows to your needs [Section 2](#231-customizing-chatatomicflow-creating-a-chatbot-that-answers-in-a-given-language)\n"
    ]
   },
@@ -43,8 +43,7 @@
     "from utils import compile_and_writefile, dict_to_yaml\n",
     "import json\n",
     "import copy\n",
-    "#Specify path of your flow modules\n",
-    "FLOW_MODULES_PATH = \"./\"\n",
+    "\n",
     "\n"
    ]
   },
@@ -67,8 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-22 07:59:09,214\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:220\u001b[0m][\u001b[32mINFO\u001b[0m] - Dispatch worker started in attached thread.\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:09,224\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:221\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n"
+      "[\u001b[36m2024-03-22 19:03:43,139\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:235\u001b[0m][\u001b[32mINFO\u001b[0m] - Dispatch worker started in attached thread.\u001b[0m\n",
+      "[\u001b[36m2024-03-22 19:03:43,146\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:236\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n"
      ]
     }
    ],
@@ -105,9 +104,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-22 07:59:10,790\u001b[0m][\u001b[34maiflows.flow_verse.loading:775\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m started to sync flow module dependencies to /Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/ChatFlow/flow_modules...\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:11,135\u001b[0m][\u001b[34maiflows.flow_verse.loading:608\u001b[0m][\u001b[32mINFO\u001b[0m] - aiflows/ChatFlowModule:coflows already synced, skip\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:11,138\u001b[0m][\u001b[34maiflows.flow_verse.loading:825\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m finished syncing\n",
+      "[\u001b[36m2024-03-22 19:03:45,482\u001b[0m][\u001b[34maiflows.flow_verse.loading:775\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m started to sync flow module dependencies to /Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/2.ChatFlow/flow_modules...\u001b[0m\n",
+      "[\u001b[36m2024-03-22 19:03:45,876\u001b[0m][\u001b[34maiflows.flow_verse.loading:608\u001b[0m][\u001b[32mINFO\u001b[0m] - aiflows/ChatFlowModule:main already synced, skip\u001b[0m\n",
+      "[\u001b[36m2024-03-22 19:03:45,878\u001b[0m][\u001b[34maiflows.flow_verse.loading:825\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m finished syncing\n",
       "\n",
       "\u001b[0m\n"
      ]
@@ -115,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "['/Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/ChatFlow/flow_modules/aiflows/ChatFlowModule']"
+       "['/Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/2.ChatFlow/flow_modules/aiflows/ChatFlowModule']"
       ]
      },
      "execution_count": 4,
@@ -188,9 +187,7 @@
       "    \"backend\": {\n",
       "        \"_target_\": \"aiflows.backends.llm_lite.LiteLLMBackend\",\n",
       "        \"api_infos\": \"???\",\n",
-      "        \"model_name\": {\n",
-      "            \"openai\": \"gpt-3.5-turbo\"\n",
-      "        },\n",
+      "        \"model_name\": \"gpt-3.5-turbo\",\n",
       "        \"n\": 1,\n",
       "        \"max_tokens\": 2000,\n",
       "        \"temperature\": 0.3,\n",
@@ -203,12 +200,7 @@
       "        \"_target_\": \"aiflows.prompt_template.JinjaPrompt\"\n",
       "    },\n",
       "    \"init_human_message_prompt_template\": {\n",
-      "        \"_target_\": \"aiflows.prompt_template.JinjaPrompt\",\n",
-      "        \"template\": \"Answer the following question: {{query}}\",\n",
-      "        \"input_variables\": [\n",
-      "            \"query\"\n",
-      "        ],\n",
-      "        \"partial_variables\": {}\n",
+      "        \"_target_\": \"aiflows.prompt_template.JinjaPrompt\"\n",
       "    },\n",
       "    \"human_message_prompt_template\": {\n",
       "        \"_target_\": \"aiflows.prompt_template.JinjaPrompt\",\n",
@@ -218,9 +210,6 @@
       "        ]\n",
       "    },\n",
       "    \"input_interface_initialized\": [\n",
-      "        \"query\"\n",
-      "    ],\n",
-      "    \"input_interface_non_initialized\": [\n",
       "        \"query\"\n",
       "    ],\n",
       "    \"query_message_prompt_template\": {\n",
@@ -297,10 +286,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-22 07:59:11,585\u001b[0m][\u001b[34maiflows.utils.serve_utils:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow at flows:ChatAtomicFlow.\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:11,586\u001b[0m][\u001b[34maiflows.utils.serve_utils:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:11,593\u001b[0m][\u001b[34maiflows.utils.serve_utils:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:11,595\u001b[0m][\u001b[34maiflows.utils.serve_utils:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
+      "[\u001b[36m2024-03-22 19:03:49,905\u001b[0m][\u001b[34maiflows.utils.serve_utils:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow at flows:ChatAtomicFlow.\u001b[0m\n",
+      "[\u001b[36m2024-03-22 19:03:49,906\u001b[0m][\u001b[34maiflows.utils.serve_utils:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
+      "[\u001b[36m2024-03-22 19:03:49,907\u001b[0m][\u001b[34maiflows.utils.serve_utils:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
+      "[\u001b[36m2024-03-22 19:03:49,908\u001b[0m][\u001b[34maiflows.utils.serve_utils:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
       "\u001b[0m\n"
      ]
     },
@@ -348,7 +337,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-22 07:59:11,900\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted 4e62516b-73f7-43a7-be7b-30af64588fea at flows:ChatAtomicFlow:mounts:local:4e62516b-73f7-43a7-be7b-30af64588fea\u001b[0m\n"
+      "[\u001b[36m2024-03-22 19:03:52,466\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted 3a1e61e0-5ace-4f8a-9eef-2c691ce822aa at flows:ChatAtomicFlow:mounts:local:3a1e61e0-5ace-4f8a-9eef-2c691ce822aa\u001b[0m\n"
      ]
     }
    ],
@@ -378,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -393,36 +382,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-22 07:59:12,133\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:113\u001b[0m][\u001b[32mINFO\u001b[0m] - \n",
-      "~~~ Dispatch task ~~~\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:12,140\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:155\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_endpoint: ChatAtomicFlow\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:12,144\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:156\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_id: 4e62516b-73f7-43a7-be7b-30af64588fea\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:12,149\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:157\u001b[0m][\u001b[32mINFO\u001b[0m] - owner_id: local\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:12,151\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:158\u001b[0m][\u001b[32mINFO\u001b[0m] - message_paths: ['push_tasks:8aac5bf0-4972-4361-8e7c-93beb81a88f5:msg']\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:12,155\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:159\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\n",
-      "\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:12,255\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:182\u001b[0m][\u001b[32mINFO\u001b[0m] - Input message source: Proxy_ChatAtomicFlow\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:13,327\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:113\u001b[0m][\u001b[32mINFO\u001b[0m] - \n",
-      "~~~ Dispatch task ~~~\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:13,354\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:155\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_endpoint: ChatAtomicFlow\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:13,356\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:156\u001b[0m][\u001b[32mINFO\u001b[0m] - flow_id: 4e62516b-73f7-43a7-be7b-30af64588fea\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:13,359\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:157\u001b[0m][\u001b[32mINFO\u001b[0m] - owner_id: local\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:13,380\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:158\u001b[0m][\u001b[32mINFO\u001b[0m] - message_paths: ['push_tasks:c19c39fa-afca-4118-9db9-97418ee0edc7:msg']\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:13,393\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:159\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\n",
-      "\u001b[0m\n",
-      "[\u001b[36m2024-03-22 07:59:13,615\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:182\u001b[0m][\u001b[32mINFO\u001b[0m] - Input message source: Proxy_ChatAtomicFlow\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "~~~~Reply~~~~ \n",
       " {'api_output': 'La capitale de la Suisse est Berne.'}\n",
       "~~~~Sent message~~~~\n",
       " {'id': 0, 'query': 'Where is it located?'}\n",
       "~~~~Reply~~~~ \n",
-      " {'api_output': 'Berne est située dans le centre de la Suisse, sur les rives de la rivière Aar.'}\n"
+      " {'api_output': 'Berne est située en Suisse, au centre du pays.'}\n"
      ]
     }
    ],
@@ -456,14 +421,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-22 00:59:17,573\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted c9224c21-c2fb-44e4-91dc-487f77fd3659 at flows:ChatAtomicFlow:mounts:local:c9224c21-c2fb-44e4-91dc-487f77fd3659\u001b[0m\n"
+      "[\u001b[36m2024-03-22 19:04:48,317\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted fe362b2e-3f51-43f5-9334-b29d3dbcea09 at flows:ChatAtomicFlow:mounts:local:fe362b2e-3f51-43f5-9334-b29d3dbcea09\u001b[0m\n"
      ]
     }
    ],
@@ -490,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -506,11 +471,11 @@
      "output_type": "stream",
      "text": [
       "~~~~Reply~~~~ \n",
-      " {'api_output': 'The capital of Switzerland is Bern.'}\n",
+      " {'api_output': 'Hello! How can I assist you today?'}\n",
       "~~~~Sent message~~~~\n",
       " {'id': 0, 'query': 'Where is it located?'}\n",
       "~~~~Reply~~~~ \n",
-      " {'api_output': 'Bern is located in the Swiss Plateau, which is in the central part of Switzerland. It is surrounded by the Aare River.'}\n"
+      " {'api_output': \"I'm sorry, but I need more information to answer your question. Could you please specify what location you're asking about?\"}\n"
      ]
     }
    ],
@@ -545,14 +510,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-22 00:59:29,523\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted a01623d5-1efb-4887-ba65-9e9d06dcc6d7 at flows:ChatAtomicFlow:mounts:local:a01623d5-1efb-4887-ba65-9e9d06dcc6d7\u001b[0m\n"
+      "[\u001b[36m2024-03-22 19:05:12,833\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted 6c013253-e784-41fc-9cd0-1e324caafd5e at flows:ChatAtomicFlow:mounts:local:6c013253-e784-41fc-9cd0-1e324caafd5e\u001b[0m\n"
      ]
     }
    ],
@@ -581,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -597,17 +562,17 @@
      "output_type": "stream",
      "text": [
       "~~~~Reply~~~~ \n",
-      " The capital of Switzerland is [[Bern]].\n",
+      " How can I assist you today?\n",
       "~~~~Sent message~~~~\n",
       " {'id': 0, 'query': \"\\nDear Margaret,\\n[[Ask about her day and talk about the sunny weather]]\\n\\n[[Ask if she has finished her part of the report]]. I've finished my part and I'm looking forward to the weekend!\\n\\n[[Sign of with my name: Nicolas Baldwin]].\\n\"}\n",
       "~~~~Reply~~~~ \n",
       " Dear Margaret,\n",
       "\n",
-      "How has your day been? The weather is so sunny and beautiful today!\n",
+      "I hope you're having a wonderful day! Isn't the sunny weather just lovely?\n",
       "\n",
-      "Have you finished your part of the report yet? I've completed my section and I'm excited for the weekend!\n",
+      "Have you had a chance to finish your part of the report? I've completed mine and I'm excited for the weekend!\n",
       "\n",
-      "Take care,\n",
+      "Warm regards,\n",
       "Nicolas Baldwin\n"
      ]
     }
