Update setup notebook.

--- a/AMLD/setup/setup.ipynb
+++ b/AMLD/setup/setup.ipynb
@@ -8,9 +8,14 @@
     "\n",
     "Thank you for your interest in our workshop!\n",
     "\n",
-    "This notebook is designed to test the your setup and ensure that everything runs smoothly on the day of the workshop. Please follow the instructions below to execute the notebook successfully. If you encounter any issues, please reach out to us.\n",
-    "\n",
-    "### Requirements\n",
+    "Please download this notebook and execute all the cells. If you encounter any issues, please reach out to us."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment\n",
     "\n",
     "Before proceeding, ensure you have the following installed:\n",
     "- Python 3.10 or later\n",
@@ -28,9 +33,14 @@
     " jupyter lab\n",
     "```\n",
     "\n",
-    "Note: The setup has been tested on Unix-like systems such as macOS and Linux.\n",
-    "\n",
-    "--- \n",
+    "Note: The setup has been tested on Unix-like systems such as macOS and Linux."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "\n",
     "Most of the Flows we're going to develop during the workshop will require access to LLMs. Therefore, once you make sure that the notebook executes succesfully, please ensure you possess an **OpenAI API key** (check out [this link](https://platform.openai.com/docs/quickstart/account-setup) on how to get one) or a key from a provider supported by LiteLLM (check the list of supported providers [here]((https://docs.litellm.ai/docs/providers))). We highly recommend using an OpenAI key for this workshop. \n",
     "\n",
